--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "javascript"
   ],
   "dependencies": {
+    "dotenv": "^4.0.0",
     "express": "^4.15.2",
+    "node-sass": "^3.4.2",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "sass-loader": "^3.2.3"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
