--- a/package.json
+++ b/package.json
@@ -25,12 +25,13 @@
   "dependencies": {
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
-    "node-sass": "^3.4.2",
+    "node-sass": "^3.13.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "sass-loader": "^3.2.3"
   },
   "devDependencies": {
+    "dotenv": "^4.0.0",
     "babel-core": "^6.24.1",
     "babel-loader": "^6.4.1",
     "babel-polyfill": "^6.23.0",
