--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   ],
   "dependencies": {
     "dotenv": "^4.0.0",
+    "dotenv-webpack": "^1.4.5",
     "express": "^4.15.2",
     "node-sass": "^3.13.1",
     "react": "^15.5.4",
