--- a/.babelrc
+++ b/.babelrc
@@ -7,7 +7,9 @@
         }
       }
     ],
-    "react"
+    "react",
+    "stage-0",
+    "stage-1"
   ],
   "plugins": [
     "react-hot-loader/babel"
