--- a/package.json
+++ b/package.json
@@ -23,24 +23,38 @@
     "javascript"
   ],
   "dependencies": {
+    "axios": "^0.16.1",
     "dotenv": "^4.0.0",
     "dotenv-webpack": "^1.4.5",
     "express": "^4.15.2",
+    "lodash": "^3.10.1",
     "node-sass": "^3.13.1",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3",
+    "react-redux": "4.3.0",
+    "react-router": "^2.0.1",
+    "react-sparklines": "^1.6.0",
+    "redux": "^3.0.4",
+    "redux-promise": "^0.5.3",
     "sass-loader": "^3.2.3"
   },
   "devDependencies": {
-    "dotenv": "^4.0.0",
     "babel-core": "^6.24.1",
     "babel-loader": "^6.4.1",
     "babel-polyfill": "^6.23.0",
+    "babel-preset-env": "^1.4.0",
+    "babel-preset-es2015": "^6.1.18",
     "babel-preset-latest": "^6.22.0",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-stage-1": "^6.1.18",
     "cross-env": "^3.1.3",
     "css-loader": "^0.28.0",
+    "dotenv": "^4.0.0",
+    "dotenv-webpack": "^1.4.5",
     "file-loader": "^0.11.1",
+    "jquery": "^2.2.1",
+    "jsdom": "^8.1.0",
     "node-sass": "^4.5.2",
     "react-hot-loader": "^3.0.0-beta.6",
     "sass-loader": "^3.2.0",
